--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-body {
+html,
+body,
+#root {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
